feat: added enrichment section

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -196,7 +196,7 @@ strong {
 
 /* Engagement section */
 
-.engagement {
+.inner-container {
   background-image: linear-gradient(135deg, #f1fbff, #fff);
 }
 
