feat: added style and z index

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -217,3 +217,7 @@ strong {
 .start-title {
   @apply ml-[36px] font-bold text-2xl mb-[16px] text-[#00acc7];
 }
+
+.image-box-1 img {
+  @apply w-[180px] z-[100];
+}
